# skills

./: README.md
.system/: .codex-system-skills.marker
GordenPPTSkill/: .gitignore  CHANGELOG.md  README.md  SKILL.md  manifest.json  updates.json
animejs/: SKILL.md
chatgpt-apps/: SKILL.md
chinese-dev-guide/: SKILL.md
codex-computer-use/: .gitignore  README.md  SKILL.md
codex-session-restore/: SKILL.md
country-trade-guides/: SKILL.md
dashiai-ppt/: README.md  SKILL.md
document-formatting/: SKILL.md
easygr-perspective/: SKILL.md
eyscrm_gend_codenav_skill/: INTEGRATION.md  README.md  SKILL.md  manifest.json
fix-codex-windows/: SKILL.md
image-to-editable-ppt/: SKILL.md
image-to-editable-ppt/cli/: pyproject.toml
image-to-editable-ppt/cli/editppt/: cli.py
image-to-editable-ppt/cli/editppt/runtime/: __init__.py  _input_normalization.py  _page_artifacts.py  build_pptx_from_manifest.py  configure_image_backend.py  deck_run_state.py  deck_text_hints.py  finalize_deck_run.py  formula_renderer.py  image_gen.py  main.py  make_page_contact_sheet.py  paddle_text_hints.py  page_job_status.py  page_text_metrics.py  prepare_deck_run.py  process_asset_sheet.py  record_imagegen_result.py  record_page_dispatch.py  record_page_result.py  remove_chroma_key.py  reset_page_job.py  runtime_env.py  split_alpha_components.py  text_hints.py  validate_pptx.py
karpathy-guidelines/: SKILL.md
mr-jack-perspective/: SKILL.md  darwin-baseline.md  darwin-final.md  test-prompts.json
n8n-to-codex-skill/: SKILL.md
paper-spine-humanize/: SKILL.md
ralph/: SKILL.md
(+327 files in other folders)
